--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JBレンタカー - 簡易見積もり</title>
+  <title> 簡易見積もり</title>
   <style>
     /* 全体の設定 */
     body {
@@ -127,8 +127,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>JBレンタカー 簡易見積もり</h1>
+ 
 
     <div class="card">
       <form id="rentalForm" onsubmit="event.preventDefault(); calculateAndShowResult();">
