--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </head>
 <body>
   <div class="container">
- 
+    <h1>JBレンタカー 簡易見積もり</h1>
 
     <div class="card">
       <form id="rentalForm" onsubmit="event.preventDefault(); calculateAndShowResult();">
